--- a/index.html
+++ b/index.html
@@ -9,18 +9,65 @@
     </head>
     <body>
         <div class="container flex bg-black">
-            <div class="left  bg-grey">
-                <div class="home bg-gray rounded m-1">
+            <div class="left ">
+                <div class="home bg-gray rounded m-1 p-1">
                     <div class="logo"><img class="invert" src="logo.svg" alt=""></div>
                     <ul>
                         <li><img class="invert" src="home.svg" alt="home">Home</li>
                         <li><img class="invert" src="search.svg" alt="search">Search</li>
                     </ul>
                 </div>
-                <div class="library bg-grey rounded m-1">
+                <div class="library bg-grey rounded m-1 p-1 ">
+                    <div class="heading">
+                        <img class="invert" src="playlist.svg" alt="playlist"> 
+                    <h2>Your Library</h2>
+                    </div>
+                    <div class="footer">
+                      <div>
+                          <a href="https://www.spotify.com/in-en/legal/">
+                            <span>Legal</span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="https://www.spotify.com/in-en/safetyandprivacy/">
+                            <span>Safety & Privacy Center</span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="https://www.spotify.com/in-en/legal/privacy-policy/">
+                            <span>Privacy Policy</span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="https://www.spotify.com/in-en/legal/cookies-policy/">
+                            <span>Cookies</span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3">
+                            <span>About Ads</span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="https://www.spotify.com/in-en/accessibility/">
+                            <span>Accessibility</span>
+                          </a>
+                        </div>                    
+                  </div>
                 </div>
             </div>
-            <div class="right border"></div>
+            <div class="right bg-gray rounded">
+              <div class="header">
+                <div class="nav">
+                  <img src="https://cdn.hugeicons.com/icons/arrow-left-01-stroke-standard.svg" alt="arrow-left-01" width="32" height="32" class="invert">
+                  <img src="https://cdn.hugeicons.com/icons/arrow-right-01-stroke-standard.svg" alt="arrow-right-01" width="32" height="32" class="invert">
+                </div>
+                <div class="button">
+                  <button>Sign up</button>
+                  <button>Login</button>
+                </div>
+              </div>
+            </div>
         </div>
     </body>
 </html>    
